@@ -43,6 +43,7 @@ import org.apache.kafka.streams.errors.TaskCorruptedException;
 import org.apache.kafka.streams.errors.TaskMigratedException;
 import org.apache.kafka.streams.internals.StreamsConfigUtils;
 import org.apache.kafka.streams.internals.StreamsConfigUtils.ProcessingMode;
+import org.apache.kafka.streams.processor.StandbyUpdateListener.SuspendReason;
 import org.apache.kafka.streams.processor.TaskId;
 import org.apache.kafka.streams.processor.assignment.ProcessId;
 import org.apache.kafka.streams.processor.internals.StateDirectory.TaskDirectory;
@@ -94,6 +95,7 @@ import static org.apache.kafka.common.utils.Utils.union;
 import static org.apache.kafka.streams.processor.internals.TopologyMetadata.UNNAMED_TOPOLOGY;
 import static org.apache.kafka.test.StreamsTestUtils.TaskBuilder.standbyTask;
 import static org.apache.kafka.test.StreamsTestUtils.TaskBuilder.statefulTask;
+import static org.apache.kafka.test.StreamsTestUtils.TaskBuilder.statelessTask;
 import static org.hamcrest.CoreMatchers.hasItem;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.instanceOf;
@@ -110,6 +112,7 @@ import static org.mockito.ArgumentMatchers.anyLong;
 import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.ArgumentMatchers.argThat;
 import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.ArgumentMatchers.same;
 import static org.mockito.Mockito.atLeastOnce;
 import static org.mockito.Mockito.doNothing;
 import static org.mockito.Mockito.doThrow;
@@ -368,7 +371,7 @@ public class TaskManagerTest {
         final TaskManager taskManager = setUpTaskManager(ProcessingMode.AT_LEAST_ONCE, tasks);
         when(stateUpdater.tasks()).thenReturn(Set.of(activeTaskToClose));
         final CompletableFuture<StateUpdater.RemovedTaskResult> future = new CompletableFuture<>();
-        when(stateUpdater.remove(activeTaskToClose.id())).thenReturn(future);
+        when(stateUpdater.remove(eq(activeTaskToClose.id()), eq(SuspendReason.MIGRATED))).thenReturn(future);
         future.complete(new StateUpdater.RemovedTaskResult(activeTaskToClose));
 
         taskManager.handleAssignment(Collections.emptyMap(), Collections.emptyMap());
@@ -388,7 +391,7 @@ public class TaskManagerTest {
         final TaskManager taskManager = setUpTaskManager(ProcessingMode.AT_LEAST_ONCE, tasks);
         when(stateUpdater.tasks()).thenReturn(Set.of(activeTaskToClose));
         final CompletableFuture<StateUpdater.RemovedTaskResult> future = new CompletableFuture<>();
-        when(stateUpdater.remove(activeTaskToClose.id())).thenReturn(future);
+        when(stateUpdater.remove(eq(activeTaskToClose.id()), eq(SuspendReason.MIGRATED))).thenReturn(future);
         future.complete(new StateUpdater.RemovedTaskResult(activeTaskToClose, new RuntimeException("KABOOM!")));
 
         taskManager.handleAssignment(Collections.emptyMap(), Collections.emptyMap());
@@ -409,7 +412,7 @@ public class TaskManagerTest {
         final TaskManager taskManager = setUpTaskManager(ProcessingMode.AT_LEAST_ONCE, tasks);
         when(stateUpdater.tasks()).thenReturn(Set.of(standbyTaskToClose));
         final CompletableFuture<StateUpdater.RemovedTaskResult> future = new CompletableFuture<>();
-        when(stateUpdater.remove(standbyTaskToClose.id())).thenReturn(future);
+        when(stateUpdater.remove(eq(standbyTaskToClose.id()), eq(SuspendReason.MIGRATED))).thenReturn(future);
         future.complete(new StateUpdater.RemovedTaskResult(standbyTaskToClose));
 
         taskManager.handleAssignment(Collections.emptyMap(), Collections.emptyMap());
@@ -429,7 +432,7 @@ public class TaskManagerTest {
         final TaskManager taskManager = setUpTaskManager(ProcessingMode.AT_LEAST_ONCE, tasks);
         when(stateUpdater.tasks()).thenReturn(Set.of(standbyTaskToClose));
         final CompletableFuture<StateUpdater.RemovedTaskResult> future = new CompletableFuture<>();
-        when(stateUpdater.remove(standbyTaskToClose.id())).thenReturn(future);
+        when(stateUpdater.remove(eq(standbyTaskToClose.id()), eq(SuspendReason.MIGRATED))).thenReturn(future);
         future.complete(new StateUpdater.RemovedTaskResult(standbyTaskToClose, new RuntimeException("KABOOM!")));
 
         taskManager.handleAssignment(Collections.emptyMap(), Collections.emptyMap());
@@ -450,7 +453,7 @@ public class TaskManagerTest {
         final TaskManager taskManager = setUpTaskManager(ProcessingMode.AT_LEAST_ONCE, tasks);
         when(stateUpdater.tasks()).thenReturn(Set.of(failedStandbyTask));
         final CompletableFuture<StateUpdater.RemovedTaskResult> future = new CompletableFuture<>();
-        when(stateUpdater.remove(failedStandbyTask.id())).thenReturn(future);
+        when(stateUpdater.remove(eq(failedStandbyTask.id()), eq(SuspendReason.MIGRATED))).thenReturn(future);
         final RuntimeException kaboom = new RuntimeException("KABOOM!");
         future.completeExceptionally(kaboom);
         when(stateUpdater.drainExceptionsAndFailedTasks())
@@ -477,7 +480,7 @@ public class TaskManagerTest {
         final TaskManager taskManager = setUpTaskManager(ProcessingMode.AT_LEAST_ONCE, tasks);
         when(stateUpdater.tasks()).thenReturn(Set.of(activeTaskToUpdateInputPartitions));
         final CompletableFuture<StateUpdater.RemovedTaskResult> future = new CompletableFuture<>();
-        when(stateUpdater.remove(activeTaskToUpdateInputPartitions.id())).thenReturn(future);
+        when(stateUpdater.remove(eq(activeTaskToUpdateInputPartitions.id()), eq(SuspendReason.MIGRATED))).thenReturn(future);
         future.complete(new StateUpdater.RemovedTaskResult(activeTaskToUpdateInputPartitions));
 
         taskManager.handleAssignment(
@@ -507,7 +510,7 @@ public class TaskManagerTest {
         when(standbyTaskCreator.createStandbyTaskFromActive(activeTaskToRecycle, taskId03Partitions))
             .thenReturn(recycledStandbyTask);
         final CompletableFuture<StateUpdater.RemovedTaskResult> future = new CompletableFuture<>();
-        when(stateUpdater.remove(taskId03)).thenReturn(future);
+        when(stateUpdater.remove(eq(taskId03), eq(SuspendReason.MIGRATED))).thenReturn(future);
         future.complete(new StateUpdater.RemovedTaskResult(activeTaskToRecycle));
 
         taskManager.handleAssignment(
@@ -531,7 +534,7 @@ public class TaskManagerTest {
         when(standbyTaskCreator.createStandbyTaskFromActive(activeTaskToRecycle, activeTaskToRecycle.inputPartitions()))
             .thenThrow(new RuntimeException());
         final CompletableFuture<StateUpdater.RemovedTaskResult> future = new CompletableFuture<>();
-        when(stateUpdater.remove(activeTaskToRecycle.id())).thenReturn(future);
+        when(stateUpdater.remove(eq(activeTaskToRecycle.id()), eq(SuspendReason.MIGRATED))).thenReturn(future);
         future.complete(new StateUpdater.RemovedTaskResult(activeTaskToRecycle));
 
         assertThrows(
@@ -561,7 +564,7 @@ public class TaskManagerTest {
         when(activeTaskCreator.createActiveTaskFromStandby(standbyTaskToRecycle, taskId03Partitions, consumer))
             .thenReturn(recycledActiveTask);
         final CompletableFuture<StateUpdater.RemovedTaskResult> future = new CompletableFuture<>();
-        when(stateUpdater.remove(standbyTaskToRecycle.id())).thenReturn(future);
+        when(stateUpdater.remove(eq(standbyTaskToRecycle.id()), eq(SuspendReason.PROMOTED))).thenReturn(future);
         future.complete(new StateUpdater.RemovedTaskResult(standbyTaskToRecycle));
 
         taskManager.handleAssignment(
@@ -588,7 +591,7 @@ public class TaskManagerTest {
             consumer))
             .thenThrow(new RuntimeException());
         final CompletableFuture<StateUpdater.RemovedTaskResult> future = new CompletableFuture<>();
-        when(stateUpdater.remove(standbyTaskToRecycle.id())).thenReturn(future);
+        when(stateUpdater.remove(eq(standbyTaskToRecycle.id()), eq(SuspendReason.PROMOTED))).thenReturn(future);
         future.complete(new StateUpdater.RemovedTaskResult(standbyTaskToRecycle));
 
         assertThrows(
@@ -618,7 +621,7 @@ public class TaskManagerTest {
             Collections.emptyMap()
         );
 
-        verify(stateUpdater, never()).remove(reassignedActiveTask.id());
+        verify(stateUpdater, never()).remove(eq(reassignedActiveTask.id()), any());
         verify(activeTaskCreator).createTasks(consumer, Collections.emptyMap());
         verify(standbyTaskCreator).createTasks(Collections.emptyMap());
     }
@@ -652,7 +655,7 @@ public class TaskManagerTest {
         final TaskManager taskManager = setUpTaskManager(ProcessingMode.AT_LEAST_ONCE, tasks);
         when(stateUpdater.tasks()).thenReturn(Set.of(failedActiveTaskToRecycle));
         final RuntimeException taskException = new RuntimeException("Nobody expects the Spanish inquisition!");
-        when(stateUpdater.remove(failedActiveTaskToRecycle.id()))
+        when(stateUpdater.remove(eq(failedActiveTaskToRecycle.id()), eq(SuspendReason.MIGRATED)))
             .thenReturn(CompletableFuture.completedFuture(
                 new StateUpdater.RemovedTaskResult(failedActiveTaskToRecycle, taskException)
             ));
@@ -668,7 +671,7 @@ public class TaskManagerTest {
         assertEquals("Encounter unexpected fatal error for task " + failedActiveTaskToRecycle.id(), exception.getMessage());
         assertEquals(taskException, exception.getCause());
         verify(tasks).addFailedTask(failedActiveTaskToRecycle);
-        verify(tasks, never()).addTask(failedActiveTaskToRecycle);
+        verify(tasks, never()).addActiveTask(failedActiveTaskToRecycle);
         verify(tasks).allNonFailedInitializedTasks();
         verify(standbyTaskCreator, never()).createStandbyTaskFromActive(failedActiveTaskToRecycle, taskId03Partitions);
     }
@@ -682,7 +685,7 @@ public class TaskManagerTest {
         final TaskManager taskManager = setUpTaskManager(ProcessingMode.AT_LEAST_ONCE, tasks);
         when(stateUpdater.tasks()).thenReturn(Set.of(failedStandbyTaskToRecycle));
         final RuntimeException taskException = new RuntimeException("Nobody expects the Spanish inquisition!");
-        when(stateUpdater.remove(failedStandbyTaskToRecycle.id()))
+        when(stateUpdater.remove(eq(failedStandbyTaskToRecycle.id()), eq(SuspendReason.PROMOTED)))
             .thenReturn(CompletableFuture.completedFuture(
                 new StateUpdater.RemovedTaskResult(failedStandbyTaskToRecycle, taskException)
             ));
@@ -698,7 +701,7 @@ public class TaskManagerTest {
         assertEquals("Encounter unexpected fatal error for task " + failedStandbyTaskToRecycle.id(), exception.getMessage());
         assertEquals(taskException, exception.getCause());
         verify(tasks).addFailedTask(failedStandbyTaskToRecycle);
-        verify(tasks, never()).addTask(failedStandbyTaskToRecycle);
+        verify(tasks, never()).addStandbyTask(failedStandbyTaskToRecycle);
         verify(tasks).allNonFailedInitializedTasks();
         verify(activeTaskCreator, never()).createActiveTaskFromStandby(failedStandbyTaskToRecycle, taskId03Partitions, consumer);
     }
@@ -712,7 +715,7 @@ public class TaskManagerTest {
         final TaskManager taskManager = setUpTaskManager(ProcessingMode.AT_LEAST_ONCE, tasks);
         when(stateUpdater.tasks()).thenReturn(Set.of(failedActiveTaskToReassign));
         final RuntimeException taskException = new RuntimeException("Nobody expects the Spanish inquisition!");
-        when(stateUpdater.remove(failedActiveTaskToReassign.id()))
+        when(stateUpdater.remove(eq(failedActiveTaskToReassign.id()), eq(SuspendReason.MIGRATED)))
             .thenReturn(CompletableFuture.completedFuture(
                 new StateUpdater.RemovedTaskResult(failedActiveTaskToReassign, taskException)
             ));
@@ -728,7 +731,7 @@ public class TaskManagerTest {
         assertEquals("Encounter unexpected fatal error for task " + failedActiveTaskToReassign.id(), exception.getMessage());
         assertEquals(taskException, exception.getCause());
         verify(tasks).addFailedTask(failedActiveTaskToReassign);
-        verify(tasks, never()).addTask(failedActiveTaskToReassign);
+        verify(tasks, never()).addActiveTask(failedActiveTaskToReassign);
         verify(tasks).allNonFailedInitializedTasks();
         verify(tasks, never()).updateActiveTaskInputPartitions(failedActiveTaskToReassign, taskId00Partitions);
     }
@@ -745,7 +748,7 @@ public class TaskManagerTest {
         final TaskManager taskManager = setUpTaskManager(ProcessingMode.AT_LEAST_ONCE, tasks);
         when(tasks.allNonFailedInitializedTasks()).thenReturn(Set.of(reassignedActiveTask1));
         when(stateUpdater.tasks()).thenReturn(Set.of(reassignedActiveTask2));
-        when(stateUpdater.remove(reassignedActiveTask2.id()))
+        when(stateUpdater.remove(eq(reassignedActiveTask2.id()), eq(SuspendReason.MIGRATED)))
             .thenReturn(CompletableFuture.completedFuture(new StateUpdater.RemovedTaskResult(reassignedActiveTask2)));
 
         taskManager.handleAssignment(
@@ -757,7 +760,7 @@ public class TaskManagerTest {
         );
 
         final InOrder inOrder = inOrder(stateUpdater, tasks);
-        inOrder.verify(stateUpdater).remove(reassignedActiveTask2.id());
+        inOrder.verify(stateUpdater).remove(eq(reassignedActiveTask2.id()), eq(SuspendReason.MIGRATED));
         inOrder.verify(tasks).removeTask(reassignedActiveTask1);
         inOrder.verify(stateUpdater).add(reassignedActiveTask1);
     }
@@ -775,7 +778,7 @@ public class TaskManagerTest {
             Collections.emptyMap(),
             mkMap(mkEntry(standbyTaskToUpdateInputPartitions.id(), taskId03Partitions))
         );
-        verify(stateUpdater, never()).remove(standbyTaskToUpdateInputPartitions.id());
+        verify(stateUpdater, never()).remove(eq(standbyTaskToUpdateInputPartitions.id()), any());
         verify(activeTaskCreator).createTasks(consumer, Collections.emptyMap());
         verify(standbyTaskCreator).createTasks(Collections.emptyMap());
     }
@@ -813,12 +816,12 @@ public class TaskManagerTest {
         final TaskManager taskManager = setUpTaskManager(ProcessingMode.AT_LEAST_ONCE, tasks);
         when(stateUpdater.tasks()).thenReturn(Set.of(activeTaskToClose, standbyTaskToRecycle));
         final CompletableFuture<StateUpdater.RemovedTaskResult> futureForActiveTaskToClose = new CompletableFuture<>();
-        when(stateUpdater.remove(activeTaskToClose.id())).thenReturn(futureForActiveTaskToClose);
+        when(stateUpdater.remove(eq(activeTaskToClose.id()), eq(SuspendReason.MIGRATED))).thenReturn(futureForActiveTaskToClose);
         futureForActiveTaskToClose.complete(new StateUpdater.RemovedTaskResult(activeTaskToClose));
         when(activeTaskCreator.createActiveTaskFromStandby(standbyTaskToRecycle, taskId02Partitions, consumer))
             .thenReturn(recycledActiveTask);
         final CompletableFuture<StateUpdater.RemovedTaskResult> futureForStandbyTaskToRecycle = new CompletableFuture<>();
-        when(stateUpdater.remove(standbyTaskToRecycle.id())).thenReturn(futureForStandbyTaskToRecycle);
+        when(stateUpdater.remove(eq(standbyTaskToRecycle.id()), eq(SuspendReason.PROMOTED))).thenReturn(futureForStandbyTaskToRecycle);
         futureForStandbyTaskToRecycle.complete(new StateUpdater.RemovedTaskResult(standbyTaskToRecycle));
 
         taskManager.handleAssignment(
@@ -882,7 +885,7 @@ public class TaskManagerTest {
             .withInputPartitions(taskId03Partitions).build();
         final TasksRegistry tasks = mock(TasksRegistry.class);
         final TaskManager taskManager = setUpTaskManager(ProcessingMode.AT_LEAST_ONCE, tasks);
-        final Set<Task> createdTasks = Set.of(activeTaskToBeCreated);
+        final Set<StreamTask> createdTasks = Set.of(activeTaskToBeCreated);
         final Map<TaskId, Set<TopicPartition>> tasksToBeCreated = mkMap(
             mkEntry(activeTaskToBeCreated.id(), activeTaskToBeCreated.inputPartitions()));
         when(activeTaskCreator.createTasks(consumer, tasksToBeCreated)).thenReturn(createdTasks);
@@ -900,7 +903,7 @@ public class TaskManagerTest {
             .withInputPartitions(taskId02Partitions).build();
         final TasksRegistry tasks = mock(TasksRegistry.class);
         final TaskManager taskManager = setUpTaskManager(ProcessingMode.AT_LEAST_ONCE, tasks);
-        final Set<Task> createdTasks = Set.of(standbyTaskToBeCreated);
+        final Set<StandbyTask> createdTasks = Set.of(standbyTaskToBeCreated);
         when(standbyTaskCreator.createTasks(mkMap(
             mkEntry(standbyTaskToBeCreated.id(), standbyTaskToBeCreated.inputPartitions())))
         ).thenReturn(createdTasks);
@@ -1314,14 +1317,14 @@ public class TaskManagerTest {
         final TaskManager taskManager = setupForRevocationAndLost(Set.of(task), tasks);
         when(stateUpdater.tasks()).thenReturn(Set.of(task));
         final CompletableFuture<StateUpdater.RemovedTaskResult> future = new CompletableFuture<>();
-        when(stateUpdater.remove(task.id())).thenReturn(future);
+        when(stateUpdater.remove(eq(task.id()), eq(SuspendReason.MIGRATED))).thenReturn(future);
         future.complete(new StateUpdater.RemovedTaskResult(task));
 
         taskManager.handleRevocation(task.inputPartitions());
 
         verify(task).suspend();
-        verify(tasks).addTask(task);
-        verify(stateUpdater).remove(task.id());
+        verify(tasks).addActiveTask(task);
+        verify(stateUpdater).remove(eq(task.id()), eq(SuspendReason.MIGRATED));
     }
 
     @Test
@@ -1335,18 +1338,18 @@ public class TaskManagerTest {
         final TasksRegistry tasks = mock(TasksRegistry.class);
         final TaskManager taskManager = setupForRevocationAndLost(Set.of(task1, task2), tasks);
         final CompletableFuture<StateUpdater.RemovedTaskResult> future1 = new CompletableFuture<>();
-        when(stateUpdater.remove(task1.id())).thenReturn(future1);
+        when(stateUpdater.remove(eq(task1.id()), eq(SuspendReason.MIGRATED))).thenReturn(future1);
         future1.complete(new StateUpdater.RemovedTaskResult(task1));
         final CompletableFuture<StateUpdater.RemovedTaskResult> future2 = new CompletableFuture<>();
-        when(stateUpdater.remove(task2.id())).thenReturn(future2);
+        when(stateUpdater.remove(eq(task2.id()), eq(SuspendReason.MIGRATED))).thenReturn(future2);
         future2.complete(new StateUpdater.RemovedTaskResult(task2));
 
         taskManager.handleRevocation(union(HashSet::new, taskId00Partitions, taskId01Partitions));
 
         verify(task1).suspend();
-        verify(tasks).addTask(task1);
+        verify(tasks).addActiveTask(task1);
         verify(task2).suspend();
-        verify(tasks).addTask(task2);
+        verify(tasks).addActiveTask(task2);
     }
 
     @Test
@@ -1360,8 +1363,8 @@ public class TaskManagerTest {
         taskManager.handleRevocation(taskId01Partitions);
 
         verify(task, never()).suspend();
-        verify(tasks, never()).addTask(task);
-        verify(stateUpdater, never()).remove(task.id());
+        verify(tasks, never()).addActiveTask(task);
+        verify(stateUpdater, never()).remove(eq(task.id()), any());
     }
 
     @Test
@@ -1375,8 +1378,8 @@ public class TaskManagerTest {
         taskManager.handleRevocation(taskId00Partitions);
 
         verify(task, never()).suspend();
-        verify(tasks, never()).addTask(task);
-        verify(stateUpdater, never()).remove(task.id());
+        verify(tasks, never()).addStandbyTask(task);
+        verify(stateUpdater, never()).remove(eq(task.id()), any());
     }
 
     @Test
@@ -1390,10 +1393,10 @@ public class TaskManagerTest {
         final TasksRegistry tasks = mock(TasksRegistry.class);
         final TaskManager taskManager = setupForRevocationAndLost(Set.of(task1, task2), tasks);
         final CompletableFuture<StateUpdater.RemovedTaskResult> future1 = new CompletableFuture<>();
-        when(stateUpdater.remove(task1.id())).thenReturn(future1);
+        when(stateUpdater.remove(eq(task1.id()), eq(SuspendReason.MIGRATED))).thenReturn(future1);
         future1.complete(new StateUpdater.RemovedTaskResult(task1));
         final CompletableFuture<StateUpdater.RemovedTaskResult> future2 = new CompletableFuture<>();
-        when(stateUpdater.remove(task2.id())).thenReturn(future2);
+        when(stateUpdater.remove(eq(task2.id()), eq(SuspendReason.MIGRATED))).thenReturn(future2);
         final RuntimeException taskException = new RuntimeException("Nobody expects the Spanish inquisition!");
         future2.complete(new StateUpdater.RemovedTaskResult(task2, taskException));
 
@@ -1405,7 +1408,7 @@ public class TaskManagerTest {
         assertEquals("Encounter unexpected fatal error for task " + task2.id(), thrownException.getMessage());
         assertEquals(thrownException.getCause(), taskException);
         verify(task1).suspend();
-        verify(tasks).addTask(task1);
+        verify(tasks).addActiveTask(task1);
         verify(task2, never()).suspend();
         verify(tasks).addFailedTask(task2);
     }
@@ -1424,10 +1427,10 @@ public class TaskManagerTest {
         final TasksRegistry tasks = mock(TasksRegistry.class);
         final TaskManager taskManager = setupForRevocationAndLost(Set.of(task1, task2, task3), tasks);
         final CompletableFuture<StateUpdater.RemovedTaskResult> future1 = new CompletableFuture<>();
-        when(stateUpdater.remove(task1.id())).thenReturn(future1);
+        when(stateUpdater.remove(eq(task1.id()), eq(SuspendReason.MIGRATED))).thenReturn(future1);
         future1.complete(new StateUpdater.RemovedTaskResult(task1));
         final CompletableFuture<StateUpdater.RemovedTaskResult> future3 = new CompletableFuture<>();
-        when(stateUpdater.remove(task3.id())).thenReturn(future3);
+        when(stateUpdater.remove(eq(task3.id()), eq(SuspendReason.MIGRATED))).thenReturn(future3);
         future3.complete(new StateUpdater.RemovedTaskResult(task3));
 
         taskManager.handleLostAll();
@@ -1436,7 +1439,7 @@ public class TaskManagerTest {
         verify(task1).closeClean();
         verify(task3).suspend();
         verify(task3).closeClean();
-        verify(stateUpdater, never()).remove(task2.id());
+        verify(stateUpdater, never()).remove(eq(task2.id()), eq(SuspendReason.MIGRATED));
     }
 
     @Test
@@ -1470,10 +1473,10 @@ public class TaskManagerTest {
         final TasksRegistry tasks = mock(TasksRegistry.class);
         final TaskManager taskManager = setupForRevocationAndLost(Set.of(task1, task2), tasks);
         final CompletableFuture<StateUpdater.RemovedTaskResult> future1 = new CompletableFuture<>();
-        when(stateUpdater.remove(task1.id())).thenReturn(future1);
+        when(stateUpdater.remove(eq(task1.id()), eq(SuspendReason.MIGRATED))).thenReturn(future1);
         future1.complete(new StateUpdater.RemovedTaskResult(task1, new StreamsException("Something happened")));
         final CompletableFuture<StateUpdater.RemovedTaskResult> future3 = new CompletableFuture<>();
-        when(stateUpdater.remove(task2.id())).thenReturn(future3);
+        when(stateUpdater.remove(eq(task2.id()), eq(SuspendReason.MIGRATED))).thenReturn(future3);
         future3.complete(new StateUpdater.RemovedTaskResult(task2, new StreamsException("Something else happened")));
 
         taskManager.handleLostAll();
@@ -1501,10 +1504,10 @@ public class TaskManagerTest {
         when(tasks.drainPendingActiveTasksToInit()).thenReturn(Set.of(task1));
         final TaskManager taskManager = setupForRevocationAndLost(Set.of(task2, task3), tasks);
         final CompletableFuture<StateUpdater.RemovedTaskResult> future2 = new CompletableFuture<>();
-        when(stateUpdater.remove(task2.id())).thenReturn(future2);
+        when(stateUpdater.remove(eq(task2.id()), eq(SuspendReason.MIGRATED))).thenReturn(future2);
         future2.complete(new StateUpdater.RemovedTaskResult(task2, new StreamsException("Something happened")));
         final CompletableFuture<StateUpdater.RemovedTaskResult> future3 = new CompletableFuture<>();
-        when(stateUpdater.remove(task3.id())).thenReturn(future3);
+        when(stateUpdater.remove(eq(task3.id()), eq(SuspendReason.MIGRATED))).thenReturn(future3);
         future3.complete(new StateUpdater.RemovedTaskResult(task3));
 
         taskManager.handleLostAll();
@@ -1560,7 +1563,7 @@ public class TaskManagerTest {
         for (final StreamTask restoredTask : restoredTasks) {
             verify(restoredTask).completeRestoration(noOpResetter);
             verify(restoredTask, atLeastOnce()).clearTaskTimeout();
-            verify(tasks).addTask(restoredTask);
+            verify(tasks).addActiveTask(restoredTask);
             verify(consumer).resume(restoredTask.inputPartitions());
         }
     }
@@ -1579,7 +1582,7 @@ public class TaskManagerTest {
 
         verify(task).maybeInitTaskTimeoutOrThrow(anyLong(), eq(timeoutException));
         verify(stateUpdater).add(task);
-        verify(tasks, never()).addTask(task);
+        verify(tasks, never()).addActiveTask(task);
         verify(task, never()).clearTaskTimeout();
         verifyNoInteractions(consumer);
     }
@@ -1614,19 +1617,19 @@ public class TaskManagerTest {
         assertThrows(StreamsException.class, () -> taskManager.checkStateUpdater(time.milliseconds(), noOpResetter));
 
         // task1 should be successfully transitioned
-        verify(tasks).addTask(task1);
+        verify(tasks).addActiveTask(task1);
         verify(consumer).resume(task1.inputPartitions());
         verify(task1).clearTaskTimeout();
 
         // task2 should be added back to state updater once in the finally block
         // (the add in the catch block doesn't execute because maybeInitTaskTimeoutOrThrow throws)
         verify(stateUpdater).add(task2);
-        verify(tasks, never()).addTask(task2);
+        verify(tasks, never()).addActiveTask(task2);
         verify(task2, never()).clearTaskTimeout();
 
         // task3 should also be added back to state updater in the finally block
         verify(stateUpdater).add(task3);
-        verify(tasks, never()).addTask(task3);
+        verify(tasks, never()).addActiveTask(task3);
         verify(task3, never()).clearTaskTimeout();
     }
 
@@ -1835,6 +1838,19 @@ public class TaskManagerTest {
     }
 
     @Test
+    public void shouldNotComputeOffsetSumForRunningStatelessTask() {
+        final StreamTask runningStatelessTask = statelessTask(taskId00).inState(State.RUNNING).build();
+        final TasksRegistry tasks = mock(TasksRegistry.class);
+        final TaskManager taskManager = setUpTaskManager(ProcessingMode.AT_LEAST_ONCE, tasks);
+        when(tasks.allInitializedTasksPerId()).thenReturn(mkMap(mkEntry(taskId00, runningStatelessTask)));
+
+        assertThat(
+                taskManager.taskOffsetSums(),
+                is(emptyMap())
+        );
+    }
+
+    @Test
     public void shouldComputeOffsetSumForNonRunningActiveTask() throws Exception {
         final StreamTask restoringStatefulTask = statefulTask(taskId00, taskId00ChangelogPartitions)
             .inState(State.RESTORING).build();
@@ -1850,6 +1866,7 @@ public class TaskManagerTest {
         final TasksRegistry tasks = mock(TasksRegistry.class);
         final TaskManager taskManager = setUpTaskManager(ProcessingMode.AT_LEAST_ONCE, tasks);
         when(stateUpdater.tasks()).thenReturn(Set.of(restoringStatefulTask));
+        when(stateDirectory.taskOffsetSums(expectedOffsetSums.keySet())).thenReturn(expectedOffsetSums);
 
         assertThat(taskManager.taskOffsetSums(), is(expectedOffsetSums));
     }
@@ -1872,6 +1889,7 @@ public class TaskManagerTest {
         when(stateUpdater.tasks()).thenReturn(Set.of(restoringStatefulTask));
         taskManager.handleRebalanceStart(singleton("topic"));
 
+        when(stateDirectory.taskOffsetSums(expectedOffsetSums.keySet())).thenReturn(expectedOffsetSums);
         assertThat(taskManager.taskOffsetSums(), is(expectedOffsetSums));
     }
 
@@ -1883,12 +1901,11 @@ public class TaskManagerTest {
         when(restoringStandbyTask.changelogOffsets()).thenReturn(mkMap(mkEntry(t1p0changelog, changelogOffset)));
         expectLockObtainedFor(taskId00);
         makeTaskFolders(taskId00.toString());
-        final Map<TopicPartition, Long> changelogOffsetInCheckpoint = mkMap(mkEntry(t1p0changelog, 24L));
-        writeCheckpointFile(taskId00, changelogOffsetInCheckpoint);
         final TasksRegistry tasks = mock(TasksRegistry.class);
         final TaskManager taskManager = setUpTaskManager(ProcessingMode.AT_LEAST_ONCE, tasks);
         when(stateUpdater.tasks()).thenReturn(Set.of(restoringStandbyTask));
         taskManager.handleRebalanceStart(singleton("topic"));
+        when(stateDirectory.taskOffsetSums(Collections.singleton(taskId00))).thenReturn(mkMap(mkEntry(taskId00, changelogOffset)));
 
         assertThat(taskManager.taskOffsetSums(), is(mkMap(mkEntry(taskId00, changelogOffset))));
     }
@@ -1914,6 +1931,12 @@ public class TaskManagerTest {
         final TaskManager taskManager = setUpTaskManager(ProcessingMode.AT_LEAST_ONCE, tasks);
         when(tasks.allInitializedTasksPerId()).thenReturn(mkMap(mkEntry(taskId00, runningStatefulTask)));
         when(stateUpdater.tasks()).thenReturn(Set.of(restoringStandbyTask, restoringStatefulTask));
+        when(stateDirectory.taskOffsetSums(Set.of(taskId00, taskId01, taskId02)))
+                .thenReturn(mkMap(
+                        mkEntry(taskId00, changelogOffsetOfRunningTask),
+                        mkEntry(taskId01, changelogOffsetOfRestoringStatefulTask),
+                        mkEntry(taskId02, changelogOffsetOfRestoringStandbyTask)
+                ));
 
         assertThat(
             taskManager.taskOffsetSums(),
@@ -1940,12 +1963,12 @@ public class TaskManagerTest {
         when(tasks.allInitializedTasksPerId()).thenReturn(mkMap(mkEntry(taskId01, restoringStatefulTask)));
         when(stateUpdater.tasks()).thenReturn(Set.of(restoringStatefulTask));
 
-        assertThat(
-            taskManager.taskOffsetSums(),
-            is(mkMap(
+        final Map<TaskId, Long> expectedOffsetSums = mkMap(
                 mkEntry(taskId01, changelogOffsetOfRestoringStandbyTask)
-            ))
         );
+
+        when(stateDirectory.taskOffsetSums(expectedOffsetSums.keySet())).thenReturn(expectedOffsetSums);
+        assertThat(taskManager.taskOffsetSums(), is(expectedOffsetSums));
     }
 
     @Test
@@ -1974,20 +1997,17 @@ public class TaskManagerTest {
         taskManager.handleRebalanceStart(singleton("topic"));
         taskManager.handleAssignment(emptyMap(), taskId00Assignment);
 
+        when(stateDirectory.taskOffsetSums(any())).thenReturn(expectedOffsetSums);
         assertThat(taskManager.taskOffsetSums(), is(expectedOffsetSums));
     }
 
     @Test
     public void shouldComputeOffsetSumForUnassignedTaskWeCanLock() throws Exception {
-        final Map<TopicPartition, Long> changelogOffsets = mkMap(
-            mkEntry(new TopicPartition("changelog", 0), 5L),
-            mkEntry(new TopicPartition("changelog", 1), 10L)
-        );
         final Map<TaskId, Long> expectedOffsetSums = mkMap(mkEntry(taskId00, 15L));
 
         expectLockObtainedFor(taskId00);
         makeTaskFolders(taskId00.toString());
-        writeCheckpointFile(taskId00, changelogOffsets);
+        when(stateDirectory.taskOffsetSums(expectedOffsetSums.keySet())).thenReturn(expectedOffsetSums);
 
         taskManager.handleRebalanceStart(singleton("topic"));
 
@@ -1997,10 +2017,6 @@ public class TaskManagerTest {
     @ParameterizedTest
     @EnumSource(value = State.class, names = {"CREATED", "CLOSED"})
     public void shouldComputeOffsetSumFromCheckpointFileForCreatedAndClosedTasks(final State state) throws Exception {
-        final Map<TopicPartition, Long> changelogOffsets = mkMap(
-            mkEntry(new TopicPartition("changelog", 0), 5L),
-            mkEntry(new TopicPartition("changelog", 1), 10L)
-        );
         final Map<TaskId, Long> expectedOffsetSums = mkMap(mkEntry(taskId00, 15L));
 
         final StreamTask task = statefulTask(taskId00, taskId00ChangelogPartitions)
@@ -2010,15 +2026,17 @@ public class TaskManagerTest {
 
         final TasksRegistry tasks = mock(TasksRegistry.class);
         when(tasks.allInitializedTasksPerId()).thenReturn(mkMap(mkEntry(taskId00, task)));
+        when(stateDirectory.taskOffsetSums(expectedOffsetSums.keySet())).thenReturn(expectedOffsetSums);
 
         final TaskManager taskManager = setUpTaskManager(ProcessingMode.AT_LEAST_ONCE, tasks);
 
         expectLockObtainedFor(taskId00);
         makeTaskFolders(taskId00.toString());
-        writeCheckpointFile(taskId00, changelogOffsets);
+        when(stateDirectory.taskOffsetSums(expectedOffsetSums.keySet())).thenReturn(expectedOffsetSums);
 
         taskManager.handleRebalanceStart(singleton("topic"));
 
+        when(stateDirectory.taskOffsetSums(Collections.singleton(taskId00))).thenReturn(expectedOffsetSums);
         assertThat(taskManager.taskOffsetSums(), is(expectedOffsetSums));
     }
     
@@ -2037,7 +2055,6 @@ public class TaskManagerTest {
         expectLockObtainedFor(taskId00);
         makeTaskFolders(taskId00.toString());
         expectDirectoryNotEmpty(taskId00);
-        when(stateDirectory.checkpointFileFor(taskId00)).thenReturn(getCheckpointFile(taskId00));
         taskManager.handleRebalanceStart(singleton("topic"));
 
         assertTrue(taskManager.taskOffsetSums().isEmpty());
@@ -2045,17 +2062,11 @@ public class TaskManagerTest {
 
     @Test
     public void shouldPinOffsetSumToLongMaxValueInCaseOfOverflow() throws Exception {
-        final long largeOffset = Long.MAX_VALUE / 2;
-        final Map<TopicPartition, Long> changelogOffsets = mkMap(
-            mkEntry(new TopicPartition("changelog", 1), largeOffset),
-            mkEntry(new TopicPartition("changelog", 2), largeOffset),
-            mkEntry(new TopicPartition("changelog", 3), largeOffset)
-        );
         final Map<TaskId, Long> expectedOffsetSums = mkMap(mkEntry(taskId00, Long.MAX_VALUE));
 
         expectLockObtainedFor(taskId00);
         makeTaskFolders(taskId00.toString());
-        writeCheckpointFile(taskId00, changelogOffsets);
+        when(stateDirectory.taskOffsetSums(expectedOffsetSums.keySet())).thenReturn(expectedOffsetSums);
         taskManager.handleRebalanceStart(singleton("topic"));
 
         assertThat(taskManager.taskOffsetSums(), is(expectedOffsetSums));
@@ -2440,7 +2451,7 @@ public class TaskManagerTest {
         final StreamsProducer producer = mock(StreamsProducer.class);
         when(activeTaskCreator.streamsProducer()).thenReturn(producer);
         final ConsumerGroupMetadata groupMetadata = mock(ConsumerGroupMetadata.class);
-        
+
         when(consumer.groupMetadata()).thenReturn(groupMetadata);
         when(consumer.assignment()).thenReturn(union(HashSet::new, taskId00Partitions, taskId01Partitions));
 
@@ -2765,12 +2776,12 @@ public class TaskManagerTest {
 
         // mock future for removing task from StateUpdater
         final CompletableFuture<StateUpdater.RemovedTaskResult> future = new CompletableFuture<>();
-        when(stateUpdater.remove(task00.id())).thenReturn(future);
+        when(stateUpdater.remove(eq(task00.id()), eq(SuspendReason.MIGRATED))).thenReturn(future);
         future.complete(new StateUpdater.RemovedTaskResult(task00));
 
         taskManager.handleAssignment(emptyMap(), emptyMap());
 
-        verify(stateUpdater).remove(task00.id());
+        verify(stateUpdater).remove(eq(task00.id()), eq(SuspendReason.MIGRATED));
         verify(task00).suspend();
         verify(task00).closeClean();
 
@@ -2951,7 +2962,7 @@ public class TaskManagerTest {
         assertFalse(restorationComplete);
         verify(task00).completeRestoration(any());
         verify(stateUpdater).add(task00);
-        verify(tasks, never()).addTask(task00);
+        verify(tasks, never()).addActiveTask(task00);
         verifyNoInteractions(consumer);
     }
 
@@ -3195,7 +3206,7 @@ public class TaskManagerTest {
         verify(task00, never()).postCommit(anyBoolean());
 
         // standby task not removed from state updater
-        verify(stateUpdater, never()).remove(task01.id());
+        verify(stateUpdater, never()).remove(eq(task01.id()), any());
         verify(task01, never()).prepareCommit(anyBoolean());
         verify(task01, never()).postCommit(anyBoolean());
 
@@ -3220,7 +3231,7 @@ public class TaskManagerTest {
 
         // mock to remove standby task from state updater
         final CompletableFuture<StateUpdater.RemovedTaskResult> future = new CompletableFuture<>();
-        when(stateUpdater.remove(task01.id())).thenReturn(future);
+        when(stateUpdater.remove(eq(task01.id()), eq(SuspendReason.MIGRATED))).thenReturn(future);
         future.complete(new StateUpdater.RemovedTaskResult(task01));
 
         final Map<TaskId, Set<TopicPartition>> assignmentActive = singletonMap(taskId00, taskId00Partitions);
@@ -3230,7 +3241,7 @@ public class TaskManagerTest {
         verify(task00, never()).prepareCommit(anyBoolean());
         verify(task00, never()).postCommit(anyBoolean());
 
-        verify(stateUpdater).remove(task01.id());
+        verify(stateUpdater).remove(eq(task01.id()), eq(SuspendReason.MIGRATED));
         verify(task01).suspend();
         verify(task01).closeClean();
 
@@ -3392,7 +3403,7 @@ public class TaskManagerTest {
 
         when(stateUpdater.tasks()).thenReturn(singleton(task00));
         final CompletableFuture<StateUpdater.RemovedTaskResult> future = mock(CompletableFuture.class);
-        when(stateUpdater.remove(eq(taskId00))).thenReturn(future);
+        when(stateUpdater.remove(eq(taskId00), eq(SuspendReason.MIGRATED))).thenReturn(future);
         when(future.get(anyLong(), any())).thenThrow(new java.util.concurrent.TimeoutException());
 
         taskManager.shutdown(true);
@@ -3420,7 +3431,7 @@ public class TaskManagerTest {
 
         // task01 is revoked, task00 stays
         final CompletableFuture<StateUpdater.RemovedTaskResult> futureTask01 = new CompletableFuture<>();
-        when(stateUpdater.remove(task01.id())).thenReturn(futureTask01);
+        when(stateUpdater.remove(eq(task01.id()), eq(SuspendReason.MIGRATED))).thenReturn(futureTask01);
         futureTask01.complete(new StateUpdater.RemovedTaskResult(task01));
 
         final RuntimeException thrown = assertThrows(RuntimeException.class,
@@ -3432,7 +3443,7 @@ public class TaskManagerTest {
 
         verify(task01, times(2)).suspend();
         verify(task01).closeDirty();
-        verify(stateUpdater, never()).remove(task00.id());
+        verify(stateUpdater, never()).remove(eq(task00.id()), eq(SuspendReason.MIGRATED));
         verify(task00, never()).suspend();
         verify(task00, never()).prepareCommit(anyBoolean());
         verify(task00, never()).closeClean();
@@ -3533,7 +3544,7 @@ public class TaskManagerTest {
         when(tasks.standbyInitializedTasks()).thenReturn(Set.of(standbyTask00));
 
         final CompletableFuture<StateUpdater.RemovedTaskResult> futureForStandbyTask = new CompletableFuture<>();
-        when(stateUpdater.remove(taskId00)).thenReturn(futureForStandbyTask);
+        when(stateUpdater.remove(eq(taskId00), eq(SuspendReason.MIGRATED))).thenReturn(futureForStandbyTask);
 
         final TaskManager taskManager = setUpTaskManager(ProcessingMode.AT_LEAST_ONCE, tasks);
 
@@ -3619,13 +3630,13 @@ public class TaskManagerTest {
         final CompletableFuture<StateUpdater.RemovedTaskResult> futureForRemovedFailedStandbyTask = new CompletableFuture<>();
         final CompletableFuture<StateUpdater.RemovedTaskResult> futureForRemovedFailedStatefulTaskDuringRemoval = new CompletableFuture<>();
         final CompletableFuture<StateUpdater.RemovedTaskResult> futureForRemovedFailedStandbyTaskDuringRemoval = new CompletableFuture<>();
-        when(stateUpdater.remove(removedStatefulTask.id())).thenReturn(futureForRemovedStatefulTask);
-        when(stateUpdater.remove(removedStandbyTask.id())).thenReturn(futureForRemovedStandbyTask);
-        when(stateUpdater.remove(removedFailedStatefulTask.id())).thenReturn(futureForRemovedFailedStatefulTask);
-        when(stateUpdater.remove(removedFailedStandbyTask.id())).thenReturn(futureForRemovedFailedStandbyTask);
-        when(stateUpdater.remove(removedFailedStatefulTaskDuringRemoval.id()))
+        when(stateUpdater.remove(eq(removedStatefulTask.id()), eq(SuspendReason.MIGRATED))).thenReturn(futureForRemovedStatefulTask);
+        when(stateUpdater.remove(eq(removedStandbyTask.id()), eq(SuspendReason.MIGRATED))).thenReturn(futureForRemovedStandbyTask);
+        when(stateUpdater.remove(eq(removedFailedStatefulTask.id()), eq(SuspendReason.MIGRATED))).thenReturn(futureForRemovedFailedStatefulTask);
+        when(stateUpdater.remove(eq(removedFailedStandbyTask.id()), eq(SuspendReason.MIGRATED))).thenReturn(futureForRemovedFailedStandbyTask);
+        when(stateUpdater.remove(eq(removedFailedStatefulTaskDuringRemoval.id()), eq(SuspendReason.MIGRATED)))
             .thenReturn(futureForRemovedFailedStatefulTaskDuringRemoval);
-        when(stateUpdater.remove(removedFailedStandbyTaskDuringRemoval.id()))
+        when(stateUpdater.remove(eq(removedFailedStandbyTaskDuringRemoval.id()), eq(SuspendReason.MIGRATED)))
             .thenReturn(futureForRemovedFailedStandbyTaskDuringRemoval);
         when(stateUpdater.drainExceptionsAndFailedTasks())
                 .thenReturn(Arrays.asList(
@@ -4429,11 +4440,11 @@ public class TaskManagerTest {
 
         // mock futures for removing tasks from StateUpdater
         final CompletableFuture<StateUpdater.RemovedTaskResult> future01 = new CompletableFuture<>();
-        when(stateUpdater.remove(taskId01)).thenReturn(future01);
+        when(stateUpdater.remove(eq(taskId01), eq(SuspendReason.MIGRATED))).thenReturn(future01);
         future01.complete(new StateUpdater.RemovedTaskResult(migratedTask01));
 
         final CompletableFuture<StateUpdater.RemovedTaskResult> future02 = new CompletableFuture<>();
-        when(stateUpdater.remove(taskId02)).thenReturn(future02);
+        when(stateUpdater.remove(eq(taskId02), eq(SuspendReason.MIGRATED))).thenReturn(future02);
         future02.complete(new StateUpdater.RemovedTaskResult(migratedTask02));
 
         final TaskMigratedException thrown = assertThrows(
@@ -4448,8 +4459,8 @@ public class TaskManagerTest {
         );
         verify(migratedTask01, times(2)).suspend();
         verify(migratedTask02, times(2)).suspend();
-        verify(stateUpdater).remove(taskId01);
-        verify(stateUpdater).remove(taskId02);
+        verify(stateUpdater).remove(eq(taskId01), eq(SuspendReason.MIGRATED));
+        verify(stateUpdater).remove(eq(taskId02), eq(SuspendReason.MIGRATED));
     }
 
     @Test
@@ -4475,11 +4486,11 @@ public class TaskManagerTest {
 
         // mock futures for removing tasks from StateUpdater
         final CompletableFuture<StateUpdater.RemovedTaskResult> future01 = new CompletableFuture<>();
-        when(stateUpdater.remove(taskId01)).thenReturn(future01);
+        when(stateUpdater.remove(eq(taskId01), eq(SuspendReason.MIGRATED))).thenReturn(future01);
         future01.complete(new StateUpdater.RemovedTaskResult(migratedTask01));
 
         final CompletableFuture<StateUpdater.RemovedTaskResult> future02 = new CompletableFuture<>();
-        when(stateUpdater.remove(taskId02)).thenReturn(future02);
+        when(stateUpdater.remove(eq(taskId02), eq(SuspendReason.MIGRATED))).thenReturn(future02);
         future02.complete(new StateUpdater.RemovedTaskResult(migratedTask02));
 
         final RuntimeException thrown = assertThrows(
@@ -4493,8 +4504,8 @@ public class TaskManagerTest {
 
         verify(migratedTask01, times(2)).suspend();
         verify(migratedTask02, times(2)).suspend();
-        verify(stateUpdater).remove(taskId01);
-        verify(stateUpdater).remove(taskId02);
+        verify(stateUpdater).remove(eq(taskId01), eq(SuspendReason.MIGRATED));
+        verify(stateUpdater).remove(eq(taskId02), eq(SuspendReason.MIGRATED));
     }
 
     @Test
@@ -4520,11 +4531,11 @@ public class TaskManagerTest {
 
         // mock futures for removing tasks from StateUpdater
         final CompletableFuture<StateUpdater.RemovedTaskResult> future01 = new CompletableFuture<>();
-        when(stateUpdater.remove(taskId01)).thenReturn(future01);
+        when(stateUpdater.remove(eq(taskId01), eq(SuspendReason.MIGRATED))).thenReturn(future01);
         future01.complete(new StateUpdater.RemovedTaskResult(migratedTask01));
 
         final CompletableFuture<StateUpdater.RemovedTaskResult> future02 = new CompletableFuture<>();
-        when(stateUpdater.remove(taskId02)).thenReturn(future02);
+        when(stateUpdater.remove(eq(taskId02), eq(SuspendReason.MIGRATED))).thenReturn(future02);
         future02.complete(new StateUpdater.RemovedTaskResult(migratedTask02));
 
         final StreamsException thrown = assertThrows(
@@ -4540,8 +4551,8 @@ public class TaskManagerTest {
 
         verify(migratedTask01, times(2)).suspend();
         verify(migratedTask02, times(2)).suspend();
-        verify(stateUpdater).remove(taskId01);
-        verify(stateUpdater).remove(taskId02);
+        verify(stateUpdater).remove(eq(taskId01), eq(SuspendReason.MIGRATED));
+        verify(stateUpdater).remove(eq(taskId02), eq(SuspendReason.MIGRATED));
     }
 
     @Test
@@ -4807,7 +4818,7 @@ public class TaskManagerTest {
         // convert active to standby
         when(stateUpdater.tasks()).thenReturn(Set.of(activeTaskToRecycle));
         final CompletableFuture<StateUpdater.RemovedTaskResult> future = new CompletableFuture<>();
-        when(stateUpdater.remove(activeTaskToRecycle.id())).thenReturn(future);
+        when(stateUpdater.remove(eq(activeTaskToRecycle.id()), eq(SuspendReason.MIGRATED))).thenReturn(future);
         future.complete(new StateUpdater.RemovedTaskResult(activeTaskToRecycle));
 
         taskManager.handleAssignment(Collections.emptyMap(), taskId00Assignment);
@@ -4839,7 +4850,7 @@ public class TaskManagerTest {
         // convert standby to active
         when(stateUpdater.tasks()).thenReturn(Set.of(standbyTaskToRecycle));
         final CompletableFuture<StateUpdater.RemovedTaskResult> future = new CompletableFuture<>();
-        when(stateUpdater.remove(standbyTaskToRecycle.id())).thenReturn(future);
+        when(stateUpdater.remove(eq(standbyTaskToRecycle.id()), eq(SuspendReason.PROMOTED))).thenReturn(future);
         future.complete(new StateUpdater.RemovedTaskResult(standbyTaskToRecycle));
 
         taskManager.handleAssignment(taskId00Assignment, Collections.emptyMap());
@@ -4879,36 +4890,33 @@ public class TaskManagerTest {
     }
 
     @Test
-    public void shouldRecycleStartupTasksFromStateDirectoryAsActive() {
+    public void shouldCreateActiveTaskFromStartupStateStore() {
         final Tasks taskRegistry = new Tasks(new LogContext());
         final TaskManager taskManager = setUpTaskManager(ProcessingMode.AT_LEAST_ONCE, taskRegistry);
-        final StandbyTask startupTask = standbyTask(taskId00, taskId00ChangelogPartitions).build();
-
         final StreamTask activeTask = statefulTask(taskId00, taskId00ChangelogPartitions).build();
-        when(activeTaskCreator.createActiveTaskFromStandby(eq(startupTask), eq(taskId00Partitions), any()))
-                .thenReturn(activeTask);
-
+        when(activeTaskCreator.createTasks(consumer, taskId00Assignment)).thenReturn(singletonList(activeTask));
         when(stateDirectory.hasStartupTasks()).thenReturn(true, false);
-        when(stateDirectory.removeStartupTask(taskId00)).thenReturn(startupTask, (Task) null);
+        when(stateDirectory.removeStartupState(taskId00)).thenReturn(true, false);
+
+        assertFalse(taskRegistry.hasPendingTasksToInit());
 
         taskManager.handleAssignment(taskId00Assignment, Collections.emptyMap());
 
-        // ensure we used our existing startup Task directly as a Standby
+        // ensure we used our existing startup state store to create our active task
         assertTrue(taskRegistry.hasPendingTasksToInit());
         assertEquals(Collections.singleton(activeTask), taskRegistry.drainPendingTasksToInit());
 
-        // we're using a mock StateUpdater here, so now that we've drained the task from the queue of startup tasks to init
+        // we're using a mock StateUpdater here, so now that we've created the task from the startup store
         // let's "add" it to our mock StateUpdater
         when(stateUpdater.tasks()).thenReturn(Collections.singleton(activeTask));
         when(stateUpdater.standbyTasks()).thenReturn(Collections.emptySet());
 
-        // ensure we recycled our existing startup Standby into an Active task
-        verify(activeTaskCreator).createActiveTaskFromStandby(eq(startupTask), eq(taskId00Partitions), any());
+        final InOrder inOrder = inOrder(activeTaskCreator);
+        inOrder.verify(activeTaskCreator).createTasks(same(consumer), eq(Map.of(taskId00, taskId00Partitions)));
+        inOrder.verify(activeTaskCreator).createTasks(consumer, emptyMap());
 
-        // ensure we didn't construct any new Tasks
-        verify(activeTaskCreator).createTasks(any(), eq(Collections.emptyMap()));
-        verify(standbyTaskCreator).createTasks(Collections.emptyMap());
-        verifyNoMoreInteractions(activeTaskCreator);
+        inOrder.verifyNoMoreInteractions();
+        verify(standbyTaskCreator).createTasks(Map.of());
         verifyNoMoreInteractions(standbyTaskCreator);
 
         // verify the recycled task is now being used as an assigned Active
@@ -4917,36 +4925,40 @@ public class TaskManagerTest {
     }
 
     @Test
-    public void shouldUseStartupTasksFromStateDirectoryAsStandby() {
+    public void shouldCreateStandbyTaskFromStartupStateStore() {
         final Tasks taskRegistry = new Tasks(new LogContext());
         final TaskManager taskManager = setUpTaskManager(ProcessingMode.AT_LEAST_ONCE, taskRegistry);
-        final StandbyTask startupTask = standbyTask(taskId00, taskId00ChangelogPartitions).build();
+        final StandbyTask standbyTask = standbyTask(taskId00, taskId00ChangelogPartitions).build();
+        when(standbyTaskCreator.createTasks(eq(Map.of(taskId00, taskId00Partitions)))).thenReturn(Set.of(standbyTask));
+
 
         when(stateDirectory.hasStartupTasks()).thenReturn(true, true, false);
-        when(stateDirectory.removeStartupTask(taskId00)).thenReturn(startupTask, (Task) null);
+        when(stateDirectory.removeStartupState(taskId00)).thenReturn(true, false);
 
         assertFalse(taskRegistry.hasPendingTasksToInit());
 
         taskManager.handleAssignment(Collections.emptyMap(), taskId00Assignment);
 
-        // ensure we used our existing startup Task directly as a Standby
+        // ensure we used our existing startup state to create our standby task
         assertTrue(taskRegistry.hasPendingTasksToInit());
-        assertEquals(Collections.singleton(startupTask), taskRegistry.drainPendingTasksToInit());
+        assertEquals(Collections.singleton(standbyTask), taskRegistry.drainPendingTasksToInit());
 
         // we're using a mock StateUpdater here, so now that we've drained the task from the queue of startup tasks to init
         // let's "add" it to our mock StateUpdater
-        when(stateUpdater.tasks()).thenReturn(Collections.singleton(startupTask));
-        when(stateUpdater.standbyTasks()).thenReturn(Collections.singleton(startupTask));
+        when(stateUpdater.tasks()).thenReturn(Collections.singleton(standbyTask));
+        when(stateUpdater.standbyTasks()).thenReturn(Collections.singleton(standbyTask));
 
         // ensure we didn't construct any new Tasks, or recycle an existing Task; we only used the one we already have
-        verify(activeTaskCreator).createTasks(any(), eq(Collections.emptyMap()));
-        verify(standbyTaskCreator).createTasks(Collections.emptyMap());
+        verify(activeTaskCreator, times(2)).createTasks(any(), eq(Collections.emptyMap()));
+        final InOrder inOrder = inOrder(standbyTaskCreator);
+        inOrder.verify(standbyTaskCreator).createTasks(Map.of(taskId00, taskId00Partitions));
+        inOrder.verify(standbyTaskCreator).createTasks(Collections.emptyMap());
         verifyNoMoreInteractions(activeTaskCreator);
         verifyNoMoreInteractions(standbyTaskCreator);
 
         // verify the startup Standby is now being used as an assigned Standby
         assertEquals(Collections.emptyMap(), taskManager.activeTaskMap());
-        assertEquals(Collections.singletonMap(taskId00, startupTask), taskManager.standbyTaskMap());
+        assertEquals(Collections.singletonMap(taskId00, standbyTask), taskManager.standbyTaskMap());
     }
 
     @Test
